<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmallB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrition_analysis"
        android:gravity="center"
        android:textSize="60sp"
        android:layout_margin="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|bottom">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/enter_an_ingredient_list_list_for_what_you_are_cooking_like_quot_1_cup_rice_10_oz_chickpeas_quot_etc_enter_each_ingredient_on_a_new_line"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:hint="@string/type_your_ingredients"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1_cup_rice_n_10_oz_chickpeas"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyze"
            android:id="@+id/button_search_recipe"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            />
    </LinearLayout>



</FrameLayout>